[metadata]
name = oschown
author = The OSchown contributors
home-page = https://github.com/kk7ds/oschown
summary = OpenStack resource ownership transfer
description-file = README.rst
license = Apache-2
classifier =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX :: Linux
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
keywords =
    openstack

[entry_points]
console_scripts =
    oschown = oschown.main:main

[files]
packages =
    oschown

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

#[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
#warnerrors = True
